GitHub Pages spacing issue?

--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ h2 {
 }
 h3 {
 	font-size: 30px;
-	margin: 0 0 20px 0;
+	margin: 0 0 0 0;
 }
 p {
-	margin: 20px 5px 20px 5px;
+	margin: 0 5px 0 5px;
 }
 ul {
 	margin: 0 30px 5px 0;
